2005-01-06  Jackson Harper  <jackson@ximian.com>

	* Theme.cs: Speed up getting pens and solid brushes, by using
	their ARGB as a hash instead of tostring and not calling Contains.

2005-01-06  Peter Bartok <pbartok@novell.com>

	* Form.cs:
	  - Implemented OnActivated and OnDeactivate event trigger
	  - Implemented Activate() method
	  - Fixed ShowDialog() to activate the form that was active before
	    the dialog was shown
	* XplatUIX11.cs:
	  - Added global active_window var that tracks the currently active
	    X11 window
	  - Now always grabs Property changes from the root window to always
	    catch changes on the active window property
	  - Added code to PropertyNotify handler to send Active/Inactive
	    messages when state changes. This puts X11 and Win32 en par on
	    WM_ACTIVATE notifications (except for double notifications when
	    the user clicks away from our modal window to another one of our
	    windows)

2005-01-05  Jackson Harper  <jackson@ximian.com>

	* ImageList.cs: Implment ctor

2005-01-05  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs: Implement Activate/SetTopmost

2005-01-05  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs: Implement SetZOrder, minor cleanup

2005-01-05  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs: Implement GetActive/SetFocus.

2005-01-05  Peter Bartok <pbartok@novell.com>

	* XplatUI.cs, XplatUIDriver.cs, XplatUIWin32.cs, XplatUIX11.cs,
	  XplatUIOSX.cs: Added GetActive method to return the currently
	  active window for the application (or null, if none is active)
	* Form.cs:
	  - Implemented ActiveForm
	  - Commented out owner assignment for modal dialogs (causes problems
	    on Win32, since the owner will be disabled)
	  - Reworked some Active/Focus handling (still incomplete)
	* CommonDialog.cs: Commented out owner assignment for modal dialogs 
	  (causes problems on Win32, since the owner will be disabled)
	* IWin32Window: Added ComVisible attribute
